# SerialPort

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/wrs/project/serialportdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wrs/project/serialportdemo/: ByteUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: dimens.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wrs/project/serialportdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
module_serialport/: build.gradle
module_serialport/src/androidTest/java/com/wrs/project/module/serialport/: ExampleInstrumentedTest.java
module_serialport/src/main/: AndroidManifest.xml
module_serialport/src/main/cpp/: CMakeLists.txt  SerialPort.c  SerialPort.h
module_serialport/src/main/java/com/wrs/project/module/serialport/: Device.java  Driver.java  SerialPort.java  SerialPortFinder.java  SerialPortManager.java
module_serialport/src/main/java/com/wrs/project/module/serialport/listener/: OnSerialPortListener.java
module_serialport/src/main/java/com/wrs/project/module/serialport/thread/: SerialPortReadThread.java
module_serialport/src/test/java/com/wrs/project/module/serialport/: ExampleUnitTest.java
